--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,21 +1,22 @@
 name: release
-on: [create]
+on:
+  push:
+    tags:
+    - "v[0-9]+.[0-9]+.[0-9]+"
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: "github.event.ref_type == 'tag'"
     steps:
     - name: setup go
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v3
       with:
         go-version: 1.x
     - name: checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
       with:
-        fetch-depth: 1
+        fetch-depth: 0
     - name: release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        export GOBIN=$(pwd)/bin
-        PATH=$GOBIN:$PATH make release
+        make crossbuild upload
