--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,29 +12,17 @@ jobs:
         - windows-latest
     steps:
     - name: setup go
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v3
       with:
         go-version: 1.x
     - name: checkout
-      uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
-    - name: lint
+      uses: actions/checkout@v3
+    - name: Set git to use LF
       run: |
-        GO111MODULE=off GOBIN=$(pwd)/bin go get golang.org/x/lint/golint
-        bin/golint -set_exit_status ./...
-      if: "matrix.os == 'ubuntu-latest' || matrix.os == 'macOS-latest'"
+        git config --global core.autocrlf false
+        git config --global core.eol lf
+      if: "matrix.os == 'windows-latest'"
     - name: test
       run: go test -coverprofile coverage.out -covermode atomic ./...
-    - name: Convert coverage to lcov
-      uses: jandelgado/gcov2lcov-action@v1.0.0
-      with:
-        infile: coverage.out
-        outfile: coverage.lcov
-      if: "matrix.os == 'ubuntu-latest'"
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.github_token }}
-        path-to-lcov: coverage.lcov
-      if: "matrix.os == 'ubuntu-latest'"
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
